--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -23,6 +23,7 @@ table#reportData th {
   color:black;
   font-weight:bold;
   border:1px solid #cecece;
+  border-top: 0px;
   padding:7px;
   text-align:left;
   height:30px; 
