--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -82,7 +82,7 @@ div#_md_blank.window_disable h1 {
 	position:absolute;
 	text-align:right;
 	right:0;
-	bottom:0;
+	top:0;
 	padding:0;
 	margin:0;
 }
@@ -94,7 +94,7 @@ div#_md_blank.window_disable h1 {
 
 #logout a {
 	color: #444444;
-	text-shadow: 0px 1px 0px white
+	text-shadow: 0px 1px 0px white;
 	font-size: 9pt;
 	text-decoration: none;
 	margin-right: 4px;
