--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -85,6 +85,9 @@ div#_md_blank.window_disable h1 {
 	top:0;
 	padding:0;
 	margin:0;
+	background-color: #f0f0f0;
+  border-bottom-left-radius: 0.5em;
+  border: 2px solid white;
 }
 
 #logout span {
