--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -200,8 +200,8 @@
 					<div id="logout">
 						##<img style="float:left" src="resources/toolbar/logout_left.png">
 						<span>
-              <a onclick="fHelp();" href="#" title="load help centre to view documentation or ask a question">help</a><br />
-						  ##&nbsp;<span style="color:#f1f2ed">|</span>&nbsp;
+              <a onclick="fHelp();" href="#" title="load help centre to view documentation or ask a question">help</a>
+						  &nbsp;<span style="color:white">|</span>&nbsp;
 						  <a href="AppController.servlet?return=boot&logout=true">logout</a>
 						</span>
 					</div>
