--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -6,7 +6,7 @@ button.gtpb {
   text-align:center;
   color:black;
   font-size:8pt;
-  background-color:#f1f2ed;
+  background-color:#f0f0f0;
   text-shadow: 0px 1px 0px white;
 }
 	 
