--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -12,7 +12,7 @@
 }
 
 body { 
-  background-color:#f1f2ed; 
+  background-color:#f0f0f0; 
   font-family:sans-serif,Arial;
   font-size:10pt;
   margin: 0;
