--- a/gtpb_clientside/styles/toolbar.css
+++ b/gtpb_clientside/styles/toolbar.css
@@ -13,7 +13,7 @@ body { font-family:"MS Sans Serif",arial, sans_serif;
 			 padding:0px; 
 			 overflow:hidden; }
 
-#toolbarDiv { background-color:#f1f2ed; 
+#toolbarDiv { background-color:#f0f0f0; 
 							height:61px; 
 							position:absolute; 
 							top:0px; 
