--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -23,7 +23,7 @@ body {
 	padding-top: 7px;
 	border-bottom: 1px solid #cecece; /* 5px solid #eaba72; */
 	z-index: 1;
-	background-color: rgb(240,240,240); /* #f1f2ed; */
+	background-color: #f0f0f0; /* #f1f2ed; */
 	position: absolute;
 	left: 0px;
 	width: 100%;
@@ -129,7 +129,7 @@ div#_md_blank.window_disable h1 {
 #infovis .head {  
     height:12px;  
     color:black;  
-    background-color:#f1f2ed;  
+    background-color:#f0f0f0;  
 }  
   
 #infovis .head.in-path {  
