--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -154,11 +154,11 @@ div#_md_blank div#_md_dialog div#_md_content table#reportData tr#errorRow:hover 
 }  
   
 div#_md_blank div#_md_dialog div#_md_content table#reportData tr.rowb {
-  background-color:#f1f2ed;
+  background-color:#f0f0f0;
 }
 
 div#_md_blank div#_md_dialog div#_md_content table#reportData th { 
-  background-color:#f1f2ed; 
+  background-color:#f0f0f0; 
   font-size:10pt; 
   color:black;
   font-weight:bold;
