--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/text.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/text.vm
@@ -44,7 +44,6 @@
 	    #else##
 	      <textarea #if($field.getNotNull()) required #end cols="$numCols" rows="$numRows" name="$field.getInternalFieldName()" #if($updateAsType) gtpb_update_record gtpb_rowid="$sessionRowId" gtpb_internaltablename="$sessionTable.getInternalTableName()" onkeyup="fResizeTextArea(this); top.oBuffer.writeBuffer(this);" onpaste="fResizeTextArea(this); top.oBuffer.writeBuffer(this);" maxKeyCount="15" #else onkeyup="fResizeTextArea(this);" #end onclick="fResizeTextArea(this);" onfocus="this.setAttribute('focused','true')" onblur="this.removeAttribute('focused'); #if($mobile_device && $updateAsType) top.oBuffer.writeBuffer(this); #end">$fieldValue</textarea>##
 		  #if($fieldValueObject.isURL())##
-        Image: $fieldValueObject.isImage()<br>
         #if($fieldValueObject.isImage()) ## remote image
           <p><a href="$fieldValueObject.getFormattedURL()" target="_blank"><img src="$fieldValueObject.getFormattedURL()" style="max-width: 100%" /></a></p>
         #else
@@ -69,8 +68,12 @@
     #if((!$globalEdit) && $updateAsType)##
 	    #if ($fieldValueObject.isEmailAddress())##
         <a href="mailto:$fieldValue">email</a>##
-      #elseif ($fieldValueObject.isURL())##      
-        <a href="$fieldValueObject.getFormattedURL()" target="_blank" class="gtpb_url">website</a>##
+      #elseif ($fieldValueObject.isURL())##
+        #if($fieldValueObject.isImage()) ## remote image
+          <p><a href="$fieldValueObject.getFormattedURL()" target="_blank"><img src="$fieldValueObject.getFormattedURL()" style="max-width: 100%" /></a></p>
+        #else
+          <a href="$fieldValueObject.getFormattedURL()" target="_blank" class="gtpb_url">website</a>##
+        #end
       #elseif ($fieldValueObject.isTwitterName())##      
         <a href="http://www.twitter.com/$fieldValueObject" target="_blank" class="gtpb_url">twitter</a>##
        #elseif ($fieldValueObject.isTwitterHashTag())##      
