current row highlight covers coloured cells

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -106,7 +106,7 @@ table#reportData td {
   padding:3px 7px 3px 7px;
   font-size:10pt;
   cursor:default;
-  height:20px;
+  height:30px;
   min-width:2em;
   color:black!important
 }
@@ -137,7 +137,7 @@ table#reportData tr#currentRow td.colored {
 /*
   background-image: url('../styles/selected_row_fine_angled.png');
   color: black!important;
-/*
+*/
 }
 					 
 table#reportData tr.rowb td, 
