--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -161,6 +161,10 @@ table#reportData td input {
   width: 296px;
 }
 
+table#reportData td select {
+  min-width: 296px;
+}
+
 .draggingRow {
   border-width: 1px;
   border-color: black;
