--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -157,12 +157,21 @@ div.tab_content table#reportData tbody tr.rowb[forcehighlight=true]:hover td {
   background-color:#dae2ff!important;
 }
 
+table#reportData td input {
+  border: 1px solid #cecece;
+  border-radius: 0.5em;
+  padding: 0.3em;
+  font-size: 10pt;
+}
+
 table#reportData td input[type='text'] {
   width: 296px;
 }
 
 table#reportData td select {
   min-width: 296px;
+  font-size: 10pt;
+  
 }
 
 .draggingRow {
