--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -175,7 +175,7 @@ table#reportData td select {
 }
 
 table#reportData td .date select {
-  min-width: auto;
+  min-width: 0;
 }
 
 table#reportData td img {
