--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -190,7 +190,7 @@ textarea {
   border: 1px solid #cecece;
   border-radius: 0.5em;
   padding: 0.3em;
-  font-face: Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 .draggingRow {
