--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -136,7 +136,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #set($cell = "<img src='$srcUrl' />")
         #else
           #set($placeholderIcon = "$field.getAttachmentType().name().toLowerCase().png")
-          #if($placeholderIcon.equals("profile_photo"))
+          #if($placeholderIcon.equals("profile_photo.png"))
             #set($srcUrl = "/agileBase/resources/icons/file_placeholders/$placeholderIcon")
             #set($cell = "<img src='$srcUrl' />")
           #end
