--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -135,7 +135,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #set($srcUrl = "/agileBase/uploads/$sessionTable.getInternalTableName()/$field.getInternalFieldName()/$thisUniqueId/$fileValue.40.$fileValue.getExtension()")
           #set($cell = "<img src='$srcUrl' />")
         #else
-          #set($placeholderIcon = "$field.getAttachmentType().name().toLowerCase().png")
+          #set($placeholderIcon = "${field.getAttachmentType().name().toLowerCase()}.png")
           $viewTools.log("placeholderIcon $placeholderIcon")
           #if($placeholderIcon.equals("profile_photo.png"))
             #set($srcUrl = "/agileBase/resources/icons/file_placeholders/$placeholderIcon")
