--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -258,7 +258,7 @@
   <body #if(!$mobile_device) onload="#if($selection||($data.size()==0))loadPane3(); #else eval(document.getElementById('reportBody').rows[0].getAttribute('onclick')); #end" #end>
     <div id=wrapper>
 	  #if($mobile_device)
-		#parse("gui/mobile/pane2_header.vm")
+		  #parse("gui/mobile/pane2_header.vm")
 	  #end
 	  <table id=reportData cellspacing="0" #if($filtersShouldBeShown == 'true') class='lowered' #end>
       <thead>
@@ -268,7 +268,8 @@
         #parse("gui/pane2/pane2_body.vm")
 		  </tbody>
     </table>
-	  #if($mobile_device)<p>
+	  #if($mobile_device)
+      <p>
 		  #parse("gui/mobile/pane2_footer.vm")
 	  #end
     </div>
